packages/react-components/src/components/Select/Select.css
.bcds-react-aria-Select {
  display: inline-flex;
  flex-direction: column;
  gap: var(--layout-margin-xsmall);
  /* Hacks for `stretch`: https://caniuse.com/mdn-css_properties_max-width_stretch */
  max-width: -moz-available;
  max-width: -webkit-fill-available;
}

/* Label above select input */
.bcds-react-aria-Select--Label {
  color: var(--typography-color-secondary);
  font: var(--typography-regular-small-body);
}
.bcds-react-aria-Select[data-disabled] > .bcds-react-aria-Select--Label {
  color: var(--typography-color-disabled);
}

/* "(optional)" text after Label*/
.bcds-react-aria-Select--Label > .optional {
  color: var(--typography-color-secondary);
}

/* Error message */
.bcds-react-aria-Select--Error {
  font: var(--typography-regular-body);
  color: var(--typography-color-danger);
}

/* Select input equivalent */
.bcds-react-aria-Select--Button {
  background-color: var(--surface-color-forms-default);
  border: 1px solid var(--surface-color-border-default);
  border-radius: var(--layout-border-radius-medium);
  cursor: pointer;
  display: flex;
  justify-content: space-between;
  gap: var(--layout-margin-small);
  align-items: center;
  padding: 0 12px;
}
.bcds-react-aria-Select--Button.invalid {
  border-color: var(--support-border-color-danger);
}
.bcds-react-aria-Select[data-invalid] > .bcds-react-aria-Select--Button {
  border-color: var(--support-border-color-danger);
}
.bcds-react-aria-Select--Button[data-disabled] {
  background-color: var(--surface-color-forms-disabled);
  cursor: not-allowed;
}
.bcds-react-aria-Select--Button[data-hovered] {
  border-color: var(--surface-color-border-dark);
}
.bcds-react-aria-Select--Button[data-focused] {
  border-color: var(--surface-color-border-active);
  outline: solid var(--layout-border-width-medium)
    var(--surface-color-border-active);
  outline-offset: var(--layout-margin-hair);
}
.bcds-react-aria-Select--Button[data-pressed] {
  border-color: var(--surface-color-border-active);
}
.bcds-react-aria-Select--Button.medium {
  height: 40px;
}
.bcds-react-aria-Select--Button.small {
  height: 32px;
}
.bcds-react-aria-Select--Button > .bcds-react-aria-SelectValue {
  font: var(--typography-regular-body);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  min-width: 0;
}
.bcds-react-aria-Select--Button > svg {
  flex-shrink: 0;
}

/* Dropdown menu panel */
.bcds-react-aria-Select--Popover {
  background-color: var(--surface-color-forms-default);
  border: 1px solid var(--surface-color-border-default);
  border-radius: var(--layout-border-radius-medium);
  box-shadow: var(--surface-shadow-medium);
  box-sizing: border-box;
  overflow-y: auto;
  padding: var(--layout-margin-hair) var(--layout-margin-xsmall);
  width: var(
    --trigger-width
  ); /* Variable provided by Select component https://react-spectrum.adobe.com/react-aria/Select.html#popover-1 */
}
.bcds-react-aria-Select--ListBox[data-focused] {
  outline: none;
}
.bcds-react-aria-Select--ListBox > .bcds-react-aria-Section:not(:first-child) {
  border-top: 1px solid var(--surface-color-border-default);
  margin-top: 1px;
  padding-top: 2px;
}

/* Header label within Section of multi-section Select */
.bcds-react-aria-Select--Header {
  color: var(--typography-color-secondary);
  font: var(--typography-regular-small-body);
  padding: var(--layout-margin-hair) var(--layout-margin-small);
}

/* ListBox option item */
.bcds-react-aria-Select--ListBoxItem {
  border-radius: var(--layout-margin-xsmall);
  cursor: pointer;
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: var(--layout-margin-small);
  padding: 6.5px var(--layout-padding-small);
}
.bcds-react-aria-Select--ListBoxItem[data-focused],
.bcds-react-aria-Select--ListBoxItem[data-hovered] {
  background-color: var(--surface-color-secondary-button-hover);
  outline: none;
}
.bcds-react-aria-Select--ListBoxItem-icon {
  display: flex;
  align-items: center;
  justify-content: space-around;
  /* This `min-width` rule can cause horizontal overflow on very narrow Select
  instances, but if we leave it out, the icons will shrink instead. */
  min-width: 20px;
}
.bcds-react-aria-Select--ListBoxItem-Text-container {
  color: var(--typography-color-primary);
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}
.bcds-react-aria-Select--ListBoxItem-Text-label {
  font: var(--typography-regular-body);
}
.bcds-react-aria-Select--ListBoxItem.destructive {
  color: var(--surface-color-primary-danger-button-default);
}
.bcds-react-aria-Select--ListBoxItem.destructive
  .bcds-react-aria-Select--ListBoxItem-Text-label {
  color: var(--surface-color-primary-danger-button-default);
}
.bcds-react-aria-Select--ListBoxItem-Text-description {
  font: var(--typography-regular-small-body);
  color: var(--typography-color-secondary);
}

